# rust-ftp-honeypot

./: .gitignore  README.md
backend/: Cargo.toml  application-test.toml  application.toml  docker-compose.yaml  log4rs.yml  rustfmt.toml
backend/src/: main.rs
backend/src/configuration/: config.rs  mod.rs
backend/src/database/: connection.rs  mod.rs  service.rs  service_trait.rs
backend/src/database/models/: attacker.rs  attacker_to_credentials.rs  credentials.rs  mod.rs  prelude.rs  uploaded_files.rs
backend/src/external_api/: file_service.rs  mod.rs  test.txt
backend/src/filesystem/: ftp_file_handler.rs  ftp_fs.rs  mod.rs
backend/src/filesystem/models/: ftp_file.rs  ftp_node.rs  mod.rs
backend/src/honeypot/: client.rs  decoder.rs  encoder.rs  ftp.rs  ftp_access.rs  ftp_fs.rs  ftp_helper.rs  ftp_misc.rs  handler.rs  mod.rs
backend/src/login/: login_service.rs  mod.rs
backend/src/queue/: mod.rs  queue_service.rs
default_files/: Biology-Notes.docx  Chemistry-Notes.docx  English-Notes.docx  HistoryNotes.docx  Kurkuma.txt  MathNotes.docx  chefkoch.txt  links.txt  locker.py  test3.txt  test5.txt
