[package]
name = "rust-ftp-honeypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
testing = ["sea-orm/mock"]

[dependencies]
#Database ORM
sea-orm = { version = "0.11.1", features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"] }
#Logging
log = "0.4.17"
#Configuration .toml
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.7.3"
#Async main fn
tokio = { version = "1.27.0", features = ["full"] }
#Testing Async functions
actix-rt = "2.8.0"
#Testing with mocks
async-trait = "0.1.68"
libunftp = "0.18.8"
unftp-sbe-fs = "0.2.0"
reqwest = "0.11.16"
serde_json = "1.0"
sha2 = "0.10.6"
sha256 = "1.0.3"
hex = "0.4.3"
anyhow = "1.0"
chrono = "0.4.19"
regex = "1.8.4"
mockall = "0.11.4"
# Enum Strings
strum = "0.25.0"
strum_macros = "0.25.1"
rand = "0.8.5"
log4rs = { version = "1.2.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller", "gzip"] }


